// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"development" environment "noReactCompiler" variation 1`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment "noStyling" variation 1`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment "noStyling" variation 2`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment Default config 2`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "react-refresh/babel",
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noReactCompiler" variation 1`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment "noStyling" variation 2`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment Default config 2`] = `
{
  "parserOpts": {
    "createImportExpressions": false,
  },
  "plugins": [
    "babel-plugin-react-compiler",
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    [
      "polyfill-corejs3",
      {
        "method": "usage-pure",
        "version": "3.49",
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "modules": false,
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
